# constellation

./: Cargo.toml  README.md  rustfmt.toml
benches/: nbody.rs  position_update.rs  scheduling.rs
src/: bitset.rs  entities.rs  iter.rs  join.rs  lib.rs  resource.rs  world.rs
