[package]
name = "constellation"
version = "0.1.0"
authors = ["Thomas Gillen <thomas.gillen@googlemail.com>"]
description = "A data-oriented entity component system optimized for cache coherent resource access and parallel system execution."
repository = "https://github.com/TomGillen/constellation/"
documentation = "https://docs.rs/constellation"
readme = "README.md"
license = "Apache-2.0"
keywords = ["game", "gamedev", "ecs"]

[dependencies]
fnv = "1.0.3"
crossbeam = "0.2"
rayon = "0.6.0"
arrayvec = "0.3.20"
tuple_utils = "0.2"
atom = "0.3"
bitflags = "0.7.0"
