[package]
name = "constellation"
version = "0.2.0"
authors = ["Thomas Gillen <thomas.gillen@googlemail.com>"]
description = "A data-oriented entity component system optimized for cache coherent resource access and parallel system execution."
repository = "https://github.com/TomGillen/constellation/"
documentation = "https://docs.rs/constellation"
readme = "README.md"
license = "Apache-2.0"
keywords = ["game", "gamedev", "ecs"]

[dependencies]
fnv = "1.0.5"
crossbeam = "0.2.10"
rayon = "0.7.0"
arrayvec = "0.3.22"
tuple_utils = "0.2"
atom = "0.3.4"
bitflags = "0.8.2"
hibitset = "0.1.2"

[dev-dependencies]
serde_derive = "0.9"
serde = "0.9"